--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
-<div>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+<app-navbar></app-navbar>
+<div class="d-flex flex-column align-items-center">
+    <router-outlet></router-outlet>
 </div>
+<app-footer></app-footer>
