Add image slider

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
 <div class="d-flex flex-column align-items-center">
+  <div class="w-75">
     <router-outlet></router-outlet>
+  </div>
 </div>
 <app-footer></app-footer>
