Add some mock pages

--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -2,24 +2,24 @@
     <a class="navbar-brand" routerLink="/">
         <img src="../../../assets/images/logo.png" width="50" height="50" alt="">
     </a>
-    <button class="navbar-toggler mr-auto" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse"
+    <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
         data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown" [ngbCollapse]="isCollapsed">
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                <a class="nav-link" routerLink="/registrations">Starterlisten</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/participants">Starterlisten</a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                <a class="nav-link" routerLink="/registrations/register">An-/Abmeldung</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/registration">An-/Abmeldung</a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" routerLink="/status">Status</a>
             </li>
-            <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                <a class="nav-link" routerLink="/status">Profil</a>
+            <li class="nav-item" routerLinkActive="active">
+                <a class="nav-link" routerLink="/profile">Profil</a>
             </li>
         </ul>
     </div>
@@ -27,6 +27,6 @@
         <input type="submit" value="Logout" class="btn btn-outline-danger btn-lg my-2 my-sm-0" />
     </form>
     <form action="login" method="get" *ngSwitchCase="false">
-        <input type="submit" value="Login" class="btn btn-outline-primary btn-lg my-2 my-sm-0" />
+        <input type="submit" value="Login" class="btn btn-outline-danger btn-lg my-2 my-sm-0" />
     </form>
 </nav>
