--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<app-navbar></app-navbar>
-<div class="d-flex flex-column align-items-center">
-  <div class="w-75">
+<div class="h-100 d-flex flex-column">
+  <app-navbar></app-navbar>
+
+  <div class="d-flex flex-column flex-fill align-items-center">
     <router-outlet></router-outlet>
   </div>
+
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
