--- a/src/app/status/tracker/tracker.component.scss
+++ b/src/app/status/tracker/tracker.component.scss
@@ -5,7 +5,7 @@
   background-color: $danger;
 }
 
-.progress-step:not(.is-active) .progress-marker:before {
+.progress-step.is-complete .progress-marker:before {
   background-color: $primary;
 }
 
