--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,5 +1,8 @@
+<h1>Profil</h1>
+<hr/>
+
 <div class="card">
-  <h5 class="card-header">Profil</h5>
+  <h5 class="card-header">Deine Daten</h5>
   <div class="card-body">
     <form class="form">
       <div class="form-group">
