--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -1,32 +1,30 @@
 <nav class="navbar navbar-dark navbar-expand-sm col-sm-12 mb-3" [ngSwitch]="isAuthenticated()">
-    <a class="navbar-brand" routerLink="/">
-        <img src="../../../assets/images/logo.png" width="50" height="50" alt="">
-    </a>
-    <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
-        data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/participants">Starterlisten</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/registration">An-/Abmeldung</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/status">Status</a>
-            </li>
-            <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" routerLink="/profile">Profil</a>
-            </li>
-        </ul>
-    </div>
-    <form action="logout" method="post" *ngSwitchCase="true">
-        <input type="submit" value="Logout" class="btn btn-outline-danger btn-lg my-2 my-sm-0" />
-    </form>
-    <form action="login" method="get" *ngSwitchCase="false">
-        <input type="submit" value="Login" class="btn btn-outline-danger btn-lg my-2 my-sm-0" />
-    </form>
+  <a class="navbar-brand" routerLink="/">
+    <img src="../../../assets/images/logo.png" width="50" height="50" alt="">
+  </a>
+  <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
+          data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/participants">Starterlisten</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/registration">An-/Abmeldung</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/status">Status</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/profile">Profil</a>
+      </li>
+    </ul>
+  </div>
+  <button class="btn btn-outline-danger btn-lg my-2 my-sm-0" (click)="login()"
+          *ngSwitchCase="false">Login</button>
+  <button class="btn btn-outline-danger btn-lg my-2 my-sm-0" (click)="logout()"
+          *ngSwitchCase="true">Logout</button>
 </nav>
