--- a/src/app/shared/login/login.component.html
+++ b/src/app/shared/login/login.component.html
@@ -17,9 +17,9 @@
     <div class="col-md-8">
       <form class="form" role="form" (ngSubmit)="login()" [formGroup]="loginForm">
         <div class="form-group">
-          <label class="username-label" for="mail">E-Mail</label>
-          <input type="text" class="form-control" name="mail" id="mail" placeholder="max.mustermann@example.com"
-                 formControlName="mail" #mail>
+          <label class="username-label" for="email">E-Mail</label>
+          <input type="text" class="form-control" name="email" id="email" placeholder="max.mustermann@example.com"
+                 formControlName="email" #email>
         </div>
 
         <div class="form-group">
