--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,30 +1,125 @@
 <h1>Profil</h1>
 <hr/>
 
+<div class="alert alert-success" *ngIf="success">
+  <strong>Änderungen erfolgreich gespeichert!</strong>
+</div>
+
+<div class="alert alert-danger" *ngIf="error">
+  <strong>Änderung fehlgeschlagen!</strong> Versuche es später erneut.
+</div>
+
+<div class="alert alert-danger" *ngIf="errorEmailExists">
+  <strong>E-Mail-Adresse wird bereits verwendet!</strong> Bitte wähle eine andere.
+</div>
+
 <div class="card">
   <h5 class="card-header">Deine Daten</h5>
   <div class="card-body">
-    <form class="form">
+    <form name="form" role="form" (ngSubmit)="update()" [formGroup]="profileForm">
+
       <div class="form-group">
-        <label for="mail">E-Mail:</label>
-        <input type="email" class="form-control" id="mail">
+        <label class="form-control-label" for="first">Vorname</label>
+        <input type="text" class="form-control" id="first" name="first" placeholder="Dein Vorname"
+               formControlName="first" #first>
+        <div
+          *ngIf="profileForm.get('first')!.invalid && (profileForm.get('first')!.dirty || profileForm.get('first')!.touched)">
+          <small class="form-text text-danger" *ngIf="profileForm.get('first')?.errors?.required">
+            Vorname erforderlich!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('first')?.errors?.minlength"
+                 jhiTranslate="register.messages.validate.login.minlength">
+            Der Vorname muss mindestens ein Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('first')?.errors?.maxlength">
+            Der Vorname darf nicht länger als 50 Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('first')?.errors?.pattern">
+            Der Vorname darf nur Buchstaben enthalten!
+          </small>
+        </div>
       </div>
+
       <div class="form-group">
-        <label for="first">Vorname:</label>
-        <input type="text" class="form-control" id="first">
+        <label class="form-control-label" for="last">Nachname</label>
+        <input type="text" class="form-control" id="last" name="last" placeholder="Dein Nachname"
+               formControlName="last" #last>
+        <div
+          *ngIf="profileForm.get('last')!.invalid && (profileForm.get('last')!.dirty || profileForm.get('last')!.touched)">
+          <small class="form-text text-danger" *ngIf="profileForm.get('last')?.errors?.required">
+            Nachname erforderlich!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('last')?.errors?.minlength"
+                 jhiTranslate="register.messages.validate.login.minlength">
+            Der Nachname muss mindestens ein Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('last')?.errors?.maxlength">
+            Der Nachname darf nicht länger als 50 Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('last')?.errors?.pattern">
+            Der Nachname darf nur Buchstaben enthalten!
+          </small>
+        </div>
       </div>
+
       <div class="form-group">
-        <label for="last">Nachname:</label>
-        <input type="text" class="form-control" id="last">
+        <label class="form-control-label" for="club">Verein</label>
+        <input type="text" class="form-control" id="club" name="club" placeholder="Dein Verein"
+               formControlName="club" #club>
+        <div
+          *ngIf="profileForm.get('club')!.invalid && (profileForm.get('club')!.dirty || profileForm.get('club')!.touched)">
+          <small class="form-text text-danger" *ngIf="profileForm.get('club')?.errors?.required">
+            Verein erforderlich!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('club')?.errors?.minlength"
+                 jhiTranslate="register.messages.validate.login.minlength">
+            Der Verein muss mindestens fünf Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('club')?.errors?.maxlength">
+            Der Verein darf nicht länger als 50 Zeichen lang sein!
+          </small>
+          <small class="form-text text-danger" *ngIf="profileForm.get('club')?.errors?.pattern">
+            Der Verein darf nur Buchstaben enthalten!
+          </small>
+        </div>
       </div>
+
+
       <div class="form-group">
-        <label for="club">Verein:</label>
-        <input type="text" class="form-control" id="club">
+        <label class="form-control-label" for="email">E-Mail</label>
+        <input type="email" class="form-control" id="email" name="email"
+               placeholder="Deine E-Mail-Adresse"
+               formControlName="email">
+
+        <div
+          *ngIf="profileForm.get('email')!.invalid && (profileForm.get('email')!.dirty || profileForm.get('email')!.touched)">
+          <small class="form-text text-danger"
+                 *ngIf="profileForm.get('email')?.errors?.required">
+            E-Mail-Adresse erforderlich!
+          </small>
+
+          <small class="form-text text-danger"
+                 *ngIf="profileForm.get('email')?.errors?.email">
+            Ungültige E-Mail-Adresse!
+          </small>
+
+          <small class="form-text text-danger"
+                 *ngIf="profileForm.get('email')?.errors?.minlength">
+            Die E-Mail-Adresse muss mindestens fünf Zeichen lang sein!
+          </small>
+
+          <small class="form-text text-danger"
+                 *ngIf="profileForm.get('email')?.errors?.maxlength">
+            Die E-Mail-Adresse darf nicht länger als 100 Zeichen lang sein!
+          </small>
+        </div>
       </div>
-      <button type="submit" class="btn btn-primary">Änderungen speichern</button>
+
+      <button type="submit" [disabled]="profileForm.invalid" class="btn btn-primary">Änderungen speichern</button>
     </form>
   </div>
-  <div class="card-footer text-muted">
-    <button class="btn btn-link btn-block text-danger" (click)="delete()">Konto endgültig löschen</button>
+  <div [ngSwitch]="removalConfirmed" class="card-footer text-muted">
+    <button *ngSwitchCase="false" class="btn btn-link btn-block text-danger" (click)="confirmRemoval()">Konto endgültig löschen</button>
+    <button *ngSwitchCase="true" class="btn btn-link btn-block text-danger" (click)="delete()">Bist du sicher?</button>
   </div>
 </div>
