--- a/src/app/participants/participants.component.html
+++ b/src/app/participants/participants.component.html
@@ -31,7 +31,7 @@
     <h5>Starterliste</h5>
     <app-table [headers]="singleHeaders" [items]="singleStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3">
+  <div class="d-flex flex-column m-3" *ngIf="singleWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="singleHeaders" [items]="singleWaiting"></app-table>
   </div>
@@ -67,7 +67,7 @@
     <h5>Starterliste</h5>
     <app-table [headers]="doubleHeaders" [items]="doubleStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3">
+  <div class="d-flex flex-column m-3" *ngIf="doubleWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="doubleHeaders" [items]="doubleWaiting"></app-table>
   </div>
@@ -89,7 +89,7 @@
     <h5>Starterliste</h5>
     <app-table [headers]="mixedHeaders" [items]="mixedStarting"></app-table>
   </div>
-  <div class="d-flex flex-column m-3">
+  <div class="d-flex flex-column m-3" *ngIf="mixedWaiting.length">
     <h5>Warteliste</h5>
     <app-table [headers]="mixedHeaders" [items]="mixedWaiting"></app-table>
   </div>
