Add status page

--- a/src/app/status/tracker/tracker.component.html
+++ b/src/app/status/tracker/tracker.component.html
@@ -4,7 +4,7 @@
     <span class="progress-marker"></span>
     <div class="progress-text">
       <h4 class="progress-title">{{step.title}}</h4>
-      {{step.text}}
+      {{step.description}}
     </div>
   </li>
 </ul>
