--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="h-100 d-flex flex-column">
   <app-navbar></app-navbar>
 
-  <div class="d-flex flex-column flex-fill align-items-center">
+  <div class="d-flex flex-column flex-fill align-items-center mx-5">
     <router-outlet></router-outlet>
   </div>
 
