--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -2,37 +2,106 @@
 <hr/>
 
 <div class="d-flex flex-wrap">
-  <div class="card m-3">
+  <form class="card m-3" (ngSubmit)="registerForDouble()" [formGroup]="doubleForm">
     <h5 class="card-header">Doppel</h5>
     <div class="card-body">
-      <form class="form">
-        <div class="form-group">
-          <label for="doubleDivision" class="mr-1">Spielklasse:</label>
-          <select id="doubleDivision" class="form-control">
-            <option [value]="'A'" *ngFor="let division of []">{{'attribute'}}</option>
-          </select>
-        </div>
+      <div class="form-inline form-group mr-3">
+        <label for="doubleDivisions" class="mr-1">Spielklasse:</label>
+        <select id="doubleDivisions" class="form-control" formControlName="divisionName">
+          <option *ngFor="let d of doubleDivisions">{{d}}</option>
+        </select>
+      </div>
+
         <fieldset class="border p-2">
           <legend class="w-auto">Partner|in</legend>
+
           <div class="form-group">
-            <label for="doubleFirst">Vorname:</label>
-            <input type="text" class="form-control" id="doubleFirst">
+            <label class="form-control-label" for="first">Vorname</label>
+            <input type="text" class="form-control" id="first" name="first" placeholder="Vorname deines Partners"
+                   formControlName="first">
+            <div
+              *ngIf="doubleForm.get('first')!.invalid && (doubleForm.get('first')!.dirty || doubleForm.get('first')!.touched)">
+              <small class="form-text text-danger" *ngIf="doubleForm.get('first')?.errors?.required">
+                Vorname erforderlich!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('first')?.errors?.minlength"
+                     jhiTranslate="register.messages.validate.login.minlength">
+                Der Vorname muss mindestens ein Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('first')?.errors?.maxlength">
+                Der Vorname darf nicht länger als 50 Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('first')?.errors?.pattern">
+                Der Vorname darf nur Buchstaben enthalten!
+              </small>
+            </div>
           </div>
+
           <div class="form-group">
-            <label for="doubleLast">Nachname:</label>
-            <input type="text" class="form-control" id="doubleLast">
+            <label class="form-control-label" for="last">Nachname</label>
+            <input type="text" class="form-control" id="last" name="last" placeholder="Nachname deines Partners"
+                   formControlName="last">
+            <div
+              *ngIf="doubleForm.get('last')!.invalid && (doubleForm.get('last')!.dirty || doubleForm.get('last')!.touched)">
+              <small class="form-text text-danger" *ngIf="doubleForm.get('last')?.errors?.required">
+                Nachname erforderlich!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('last')?.errors?.minlength"
+                     jhiTranslate="register.messages.validate.login.minlength">
+                Der Nachname muss mindestens ein Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('last')?.errors?.maxlength">
+                Der Nachname darf nicht länger als 50 Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('last')?.errors?.pattern">
+                Der Nachname darf nur Buchstaben enthalten!
+              </small>
+            </div>
           </div>
+
           <div class="form-group">
-            <label for="doubleClub">Verein:</label>
-            <input type="text" class="form-control" id="doubleClub">
+            <label class="form-control-label" for="gender">Geschlecht</label>
+            <select class="form-control" id="gender" name="gender"
+                    formControlName="gender" #gender>
+              <option [ngValue]="null" disabled>Dein Geschlecht</option>
+              <option [ngValue]="Gender.MALE">männlich</option>
+              <option [ngValue]="Gender.FEMALE">weiblich</option>
+            </select>
+            <div
+              *ngIf="doubleForm.get('gender')!.invalid && (doubleForm.get('gender')!.dirty || doubleForm.get('gender')!.touched)">
+              <small class="form-text text-danger" *ngIf="doubleForm.get('gender')?.errors?.required">
+                Geschlecht erforderlich!
+              </small>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="form-control-label" for="club">Verein</label>
+            <input type="text" class="form-control" id="club" name="club" placeholder="Verein deines Partners"
+                   formControlName="club" #club>
+            <div
+              *ngIf="doubleForm.get('club')!.invalid && (doubleForm.get('club')!.dirty || doubleForm.get('club')!.touched)">
+              <small class="form-text text-danger" *ngIf="doubleForm.get('club')?.errors?.required">
+                Verein erforderlich!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('club')?.errors?.minlength"
+                     jhiTranslate="register.messages.validate.login.minlength">
+                Der Verein muss mindestens fünf Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('club')?.errors?.maxlength">
+                Der Verein darf nicht länger als 50 Zeichen lang sein!
+              </small>
+              <small class="form-text text-danger" *ngIf="doubleForm.get('club')?.errors?.pattern">
+                Der Verein darf nur Buchstaben enthalten!
+              </small>
+            </div>
           </div>
         </fieldset>
-      </form>
     </div>
     <div class="card-footer text-muted">
       <button type="submit" class="btn btn-primary">Verbindlich anmelden</button>
     </div>
-  </div>
+  </form>
 
   <div class="card m-3">
     <h5 class="card-header">Mixed</h5>
@@ -66,20 +135,25 @@
     </div>
   </div>
 
-  <div class="card m-3">
+  <form class="card m-3" [formGroup]="singleForm" (ngSubmit)="registerForSingle()">
     <h5 class="card-header">Einzel</h5>
     <div class="card-body">
-      <form class="form">
-        <div class="form-group">
-          <label for="singleDivision" class="mr-1">Spielklasse:</label>
-          <select id="singleDivision" class="form-control">
-            <option [value]="'A'" *ngFor="let division of []">{{'attribute'}}</option>
-          </select>
+      <div class="form-inline form-group">
+        <label for="singleDivisions" class="mr-1">Spielklasse:</label>
+        <select id="singleDivisions" class="form-control" formControlName="divisionName">
+          <option *ngFor="let d of singleDivisions">{{d}}</option>
+        </select>
+        <div
+          *ngIf="singleForm.get('divisionName')!.invalid && (singleForm.get('divisionName')!.dirty || singleForm.get('divisionName')!.touched)">
+          <small class="form-text text-danger"
+                 *ngIf="singleForm.get('divisionName')?.errors?.required">
+            Spielklasse erforderlich!
+          </small>
         </div>
-      </form>
+      </div>
     </div>
     <div class="card-footer text-muted">
       <button type="submit" class="btn btn-primary">Verbindlich anmelden</button>
     </div>
-  </div>
+  </form>
 </div>
