--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -5,7 +5,7 @@
   <form class="card m-3" (ngSubmit)="registerForDouble()" [formGroup]="doubleForm">
     <h5 class="card-header">Doppel</h5>
     <div class="card-body">
-      <div class="form-inline form-group mr-3">
+      <div class="form-group">
         <label for="doubleDivisions" class="mr-1">Spielklasse:</label>
         <select id="doubleDivisions" class="form-control" formControlName="divisionName">
           <option *ngFor="let d of doubleDivisions">{{d}}</option>
@@ -99,41 +99,110 @@
         </fieldset>
     </div>
     <div class="card-footer text-muted">
-      <button type="submit" class="btn btn-primary">Verbindlich anmelden</button>
+      <button type="submit" class="btn btn-primary" [disabled]="doubleForm.invalid">Verbindlich anmelden</button>
     </div>
   </form>
 
-  <div class="card m-3">
+  <form class="card m-3" (ngSubmit)="registerForMixed()" [formGroup]="mixedForm">
     <h5 class="card-header">Mixed</h5>
     <div class="card-body">
-      <form class="form">
+      <div class="form-group">
+        <label for="mixedDivisions" class="mr-1">Spielklasse:</label>
+        <select id="mixedDivisions" class="form-control" formControlName="divisionName">
+          <option *ngFor="let d of mixedDivisions">{{d}}</option>
+        </select>
+      </div>
+
+      <fieldset class="border p-2">
+        <legend class="w-auto">Partner|in</legend>
+
         <div class="form-group">
-          <label for="mixedDivision" class="mr-1">Spielklasse:</label>
-          <select id="mixedDivision" class="form-control">
-            <option [value]="'A'" *ngFor="let division of []">{{'attribute'}}</option>
-          </select>
+          <label class="form-control-label" for="firstMixed">Vorname</label>
+          <input type="text" class="form-control" id="firstMixed" name="first" placeholder="Vorname deines Partners"
+                 formControlName="first">
+          <div
+            *ngIf="mixedForm.get('first')!.invalid && (mixedForm.get('first')!.dirty || mixedForm.get('first')!.touched)">
+            <small class="form-text text-danger" *ngIf="mixedForm.get('first')?.errors?.required">
+              Vorname erforderlich!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('first')?.errors?.minlength"
+                   jhiTranslate="register.messages.validate.login.minlength">
+              Der Vorname muss mindestens ein Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('first')?.errors?.maxlength">
+              Der Vorname darf nicht länger als 50 Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('first')?.errors?.pattern">
+              Der Vorname darf nur Buchstaben enthalten!
+            </small>
+          </div>
         </div>
-        <fieldset class="border p-2">
-          <legend class="w-auto">Partner|in</legend>
-          <div class="form-group">
-            <label for="mixedFirst">Vorname:</label>
-            <input type="text" class="form-control" id="mixedFirst">
+
+        <div class="form-group">
+          <label class="form-control-label" for="lastMixed">Nachname</label>
+          <input type="text" class="form-control" id="lastMixed" name="last" placeholder="Nachname deines Partners"
+                 formControlName="last">
+          <div
+            *ngIf="mixedForm.get('last')!.invalid && (mixedForm.get('last')!.dirty || mixedForm.get('last')!.touched)">
+            <small class="form-text text-danger" *ngIf="mixedForm.get('last')?.errors?.required">
+              Nachname erforderlich!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('last')?.errors?.minlength"
+                   jhiTranslate="register.messages.validate.login.minlength">
+              Der Nachname muss mindestens ein Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('last')?.errors?.maxlength">
+              Der Nachname darf nicht länger als 50 Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('last')?.errors?.pattern">
+              Der Nachname darf nur Buchstaben enthalten!
+            </small>
           </div>
-          <div class="form-group">
-            <label for="mixedLast">Nachname:</label>
-            <input type="text" class="form-control" id="mixedLast">
+        </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="mixedGender">Geschlecht</label>
+          <select class="form-control" id="mixedGender" name="gender"
+                  formControlName="gender" #gender>
+            <option [ngValue]="null" disabled>Dein Geschlecht</option>
+            <option [ngValue]="Gender.MALE">männlich</option>
+            <option [ngValue]="Gender.FEMALE">weiblich</option>
+          </select>
+          <div
+            *ngIf="mixedForm.get('gender')!.invalid && (mixedForm.get('gender')!.dirty || mixedForm.get('gender')!.touched)">
+            <small class="form-text text-danger" *ngIf="mixedForm.get('gender')?.errors?.required">
+              Geschlecht erforderlich!
+            </small>
           </div>
-          <div class="form-group">
-            <label for="mixedClub">Verein:</label>
-            <input type="text" class="form-control" id="mixedClub">
+        </div>
+
+        <div class="form-group">
+          <label class="form-control-label" for="mixedClub">Verein</label>
+          <input type="text" class="form-control" id="mixedClub" name="club" placeholder="Verein deines Partners"
+                 formControlName="club" #club>
+          <div
+            *ngIf="mixedForm.get('club')!.invalid && (mixedForm.get('club')!.dirty || mixedForm.get('club')!.touched)">
+            <small class="form-text text-danger" *ngIf="mixedForm.get('club')?.errors?.required">
+              Verein erforderlich!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('club')?.errors?.minlength"
+                   jhiTranslate="register.messages.validate.login.minlength">
+              Der Verein muss mindestens fünf Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('club')?.errors?.maxlength">
+              Der Verein darf nicht länger als 50 Zeichen lang sein!
+            </small>
+            <small class="form-text text-danger" *ngIf="mixedForm.get('club')?.errors?.pattern">
+              Der Verein darf nur Buchstaben enthalten!
+            </small>
           </div>
-        </fieldset>
-      </form>
+        </div>
+      </fieldset>
     </div>
     <div class="card-footer text-muted">
-      <button type="submit" class="btn btn-primary">Verbindlich anmelden</button>
+      <button type="submit" class="btn btn-primary" [disabled]="mixedForm.invalid">Verbindlich anmelden</button>
     </div>
-  </div>
+  </form>
 
   <form class="card m-3" [formGroup]="singleForm" (ngSubmit)="registerForSingle()">
     <h5 class="card-header">Einzel</h5>
@@ -153,7 +222,7 @@
       </div>
     </div>
     <div class="card-footer text-muted">
-      <button type="submit" class="btn btn-primary">Verbindlich anmelden</button>
+      <button type="submit" class="btn btn-primary" [disabled]="singleForm.invalid">Verbindlich anmelden</button>
     </div>
   </form>
 </div>
