--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -2,24 +2,23 @@
   <a class="navbar-brand" routerLink="/">
     <img src="../../../assets/images/logo.png" width="50" height="50" alt="">
   </a>
-  <button class="navbar-toggler mr-auto" type="button" data-toggle="collapse"
-          data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
+  <button class="navbar-toggler mr-auto" type="button" (click)="isCollapsed = !isCollapsed"
           aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+  <div class="collapse navbar-collapse" [ngbCollapse]="isCollapsed">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/participants">Teilnehmerlisten</a>
+        <a class="nav-link" routerLink="/participants" (click)="isCollapsed = true">Teilnehmerlisten</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/registration">An-/Abmeldung</a>
+        <a class="nav-link" routerLink="/registration" (click)="isCollapsed = true">An-/Abmeldung</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/status">Status</a>
+        <a class="nav-link" routerLink="/status" (click)="isCollapsed = true">Status</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="/profile">Profil</a>
+        <a class="nav-link" routerLink="/profile" (click)="isCollapsed = true">Profil</a>
       </li>
     </ul>
   </div>
